force-app/main/default/objects/copado__Team_Dependency__c/fields/copado__Child_User_Story_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Child_User_Story_Status__c</fullName>
    <description>The Status of the child user story</description>
    <formula>Text( copado__Dependent_User_Story__r.copado__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Status of the child user story</inlineHelpText>
    <label>Child User Story Status</label>
    <type>Text</type>
</CustomField>