force-app/main/default/objects/copado__Team_Dependency__c/fields/copado__Deliverable__c.field-meta.xml
<CustomField>
    <fullName>copado__Deliverable__c</fullName>
    <inlineHelpText>Short description (255 chars max) of the User Story that is needed from the other team. More detailed description can be added to the Notes field.</inlineHelpText>
    <label>Deliverable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>