force-app/main/default/objects/copado__Team_Dependency__c/fields/copado__Dependent_Team__c.field-meta.xml
<CustomField>
    <fullName>copado__Dependent_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Team that is dependent on another team to provide the User Story.</description>
    <inlineHelpText>The Team that is dependent on another team to provide the User Story.</inlineHelpText>
    <label>Child User Story Team</label>
    <referenceTo>copado__Team__c</referenceTo>
    <relationshipLabel>User Story Dependencies (Dependent Team)</relationshipLabel>
    <relationshipName>Team_Dependencies_For_Team</relationshipName>
    <type>Lookup</type>
</CustomField>