force-app/main/default/objects/copado__Team_Dependency__c/fields/copado__Needed_by_Date__c.field-meta.xml
<CustomField>
    <fullName>copado__Needed_by_Date__c</fullName>
    <label>Needed by (Date)</label>
    <type>Date</type>
</CustomField>