force-app/main/default/objects/copado__Team_Dependency__c/fields/copado__Notes__c.field-meta.xml
<CustomField>
    <fullName>copado__Notes__c</fullName>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>