force-app/main/default/objects/copado__Team_Dependency__c/fields/copado__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>copado__Relationship_Type__c</fullName>
    <inlineHelpText>Enter the value for the Parent-Child relationship type for your User Stories. By default, the field value is set to &quot;Relates-to.&quot; You can add other values, as this is an unrestricted list.</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>relates to</fullName>
                <default>true</default>
                <label>relates to</label>
            </value>
            <value>
                <fullName>duplicating</fullName>
            </value>
            <value>
                <fullName>blocking</fullName>
            </value>
            <value>
                <fullName>fixing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>