force-app/main/default/objects/copado__Team_Dependency__c/fields/copado__Skip_Dependency__c.field-meta.xml
<CustomField>
    <fullName>copado__Skip_Dependency__c</fullName>
    <formula>OR( ISPICKVAL( copado__Dependency_Status__c ,&apos;Completed&apos;), ISPICKVAL( copado__Dependency_Status__c ,&apos;Deferred&apos;), ISPICKVAL( copado__Dependency_Status__c ,&apos;Never&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The value is set to True whenever a Dependency Status is set to Completed, Deferred, or Never.</inlineHelpText>
    <label>Skip Dependency</label>
    <type>Checkbox</type>
</CustomField>