force-app/main/default/objects/copado__Team_Dependency__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Provider_User_Story__c</columns>
    <columns>copado__Parent_User_Story_Status__c</columns>
    <columns>copado__Dependent_User_Story__c</columns>
    <columns>copado__Child_User_Story_Status__c</columns>
    <columns>copado__Dependency_Status__c</columns>
    <columns>copado__Dependent_Team__c</columns>
    <columns>copado__Provider_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>